--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ubuntu"]
 	path = sysdrv/tools/board/ubuntu
-	url = https://github.com/luckfox-eng33/pico_ubuntu.git
+	url = https://github.com/Ruledo/pico_ubuntu.git
